fix: update examples/Demo dependencies and run-demo-particles.bat